--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                 <p>شاشة آيفون 14 = شاشة آيفون 13
                     زودت شركة آبل جهاز آيفون 14 بشاشة ذات قياس 6.1 إنشات من نوع (Super Retina XDR) بدقة 2532×1170، وهي ذاتها شاشة الجيل السابق بكثافة 440 بكسلا في الإنش والتي يصل سطوعها إلى 1200 شمعة في ظروف المدى الديناميكي العالي (HDR).
                     </p>
-                    <a href="https://www.apple.com/sa/iphone-14/?&mnid=s1BHldzJh-dc_mtid_20925dh764676_pcrid_621512652712_pgrid_136172237410_&cid=wwa-ksa-kwgo-iphone--slid---product--Brand-iPhoneFamily-Announce-&mtid=20925dh764676&aosid=p238" class="btn">اقرء المزيد</a>
+                    <a href="manafalshareef.blogspot.com" class="btn">اقرء المزيد</a>
             </div>
             <div class="phone_card">
                 <img src="imageso/phonr1.png">
                 <h1>iphone 13</h1>
                 <p>سبة التباين 2,000,000:1 (النسبة القياسية) الحد الأقصى للسطوع 800 شمعة/المتر المربع (القيمة القياسية)؛ درجة سطوع قصوى 1200 شمعة/المتر المربع (HDR) طبقة مقاومة للزيوت وبصمات الأصابع دعم عرض لغات وأنظمة كتابة متعددة في آن واحد
                     </p>
-                    <a href="https://www.apple.com/sa-ar/iphone-13/specs/" class="btn">اقرء المزيد</a>
+                    <a href="manafalshareef2.blogspot.com" class="btn">اقرء المزيد</a>
             </div>
             <div class="phone_card">
                 <img src="imageso/phonr2.png">
